--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-
 *{
     font-family: 'Noto Sans KR', sans-serif;
 }
@@ -15,32 +14,36 @@ header nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 1280px;
+    height: 100px;
+    margin: 0 auto;
 }
 
 header nav h1{
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 75px;
     margin-left: 30px;
     margin-top: 10px;
 }
 
 header nav h1 img{
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 75px;
 }
 
 header nav .menu{
-    width: 1000px;
+    width: 700px;
     height: 100px;
 }
 
 header nav .menu li{
-    width: 150px;
+    width: 140px;
     float: left;
     align-items: center;
     line-height: 100px;
     text-align: center;
     position: relative;
+    font-size: 20px;
 }
 
 header nav .menu li::after{
@@ -79,13 +82,13 @@ header nav .menu li:hover::after{
 
 
 header nav .link{
-    width: 300px;
+    width: 200px;
     height: 100px;
 }
 
 header nav .link li{
     float: left;
-    width: 100px;
+    width: 70px;
     align-items: center;
     line-height: 100px;
 }
