--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     font-family: 'Noto Sans KR', sans-serif;
 }
 
+body{
+    width: 1920px;   
+    height: 1080px;
+}
+
 
 header{
     width: 1920px;
@@ -50,7 +55,7 @@ header nav .menu li::after{
     position: absolute;
     content: "";
     display: block;
-    border-bottom: 2px solid #000;
+    border-bottom: 2px solid rgb(94, 91, 155);
     transition: all 0.3s ease-out;
     top: 75%;
     left: 0;
@@ -99,4 +104,6 @@ header nav .link li:nth-child(2){
 .toggle{
     display: none;
 }
+
+
 
